sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:9: error: Boolean(false) does not take parameters
  		{ecart = (ecart.toDouble / 1.3).toInt
                ^